<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_back"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <module.customview.TextViewNotoSansBold
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/imageViewClose"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageViewClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_close" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/name" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/style_edittext_signup"
                    android:hint="Enter Name"
                    android:imeOptions="actionNext" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/style_edittext_signup"
                    android:hint="Enter Phone Number"
                    android:imeOptions="actionNext" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/email" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/style_edittext_signup"
                    android:hint="Enter Email ID"
                    android:imeOptions="actionNext" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/designation" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextDesignation"
                    style="@style/style_edittext_signup"
                    android:focusable="false"
                    android:hint="@string/select_designation" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/grade" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextGrade"
                    style="@style/style_edittext_signup"
                    android:focusable="false"
                    android:hint="@string/select_grade" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/zone" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextZone"
                    style="@style/style_edittext_signup"
                    android:focusable="false"
                    android:hint="@string/select_zone" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/division" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextDivision"
                    style="@style/style_edittext_signup"
                    android:focusable="false"
                    android:hint="@string/select_division" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/department" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextDepartment"
                    style="@style/style_edittext_signup"
                    android:focusable="false"
                    android:hint="@string/select_department" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <module.customview.TextViewNotoSansBold
                android:id="@+id/textViewSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/search"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>