<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02FBF8F8"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/splash_logo" />

            <module.customview.TextViewNotoSansBold
                style="@style/style_textview_heading"
                android:text="My Profile" />

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:text="@string/first_name" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <module.customview.TextViewNotoSansRegular
                    style="@style/style_edittext_signup"
                    android:imeOptions="actionNext" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/last_name" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <module.customview.TextViewNotoSansRegular
                    style="@style/style_edittext_signup"
                    android:imeOptions="actionNext" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/email" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <module.customview.TextViewNotoSansRegular style="@style/style_edittext_signup" />
            </androidx.cardview.widget.CardView>

            <module.customview.TextViewNotoSansRegular
                style="@style/style_textview_signup_field_title"
                android:layout_marginTop="10dp"
                android:text="@string/mobile" />

            <androidx.cardview.widget.CardView
                style="@style/style_editext_cardivew_signup"
                app:cardBackgroundColor="@color/white">

                <module.customview.TextViewNotoSansRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/theme_edittext"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@string/_91" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonLogin"
            style="@style/style_button_login_otp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Logout" />

        <Button
            android:id="@+id/buttonEditProfile"
            style="@style/style_button_login_otp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/update" />
    </LinearLayout>
</RelativeLayout>